tests/cases/cant_fake_inner_block.stderr
error[E0277]: the trait bound `MmioUartBank<'_>: _MmioMarker` is not satisfied
  --> tests/cases/cant_fake_inner_block.rs:20:13
   |
20 |     bank_0: UartBank,
   |             ^^^^^^^^ the trait `_MmioMarker` is not implemented for `MmioUartBank<'_>`
   |
   = help: the trait `_MmioMarker` is implemented for `MmioUart<'_>`
note: required by a bound in `is_mmio`
  --> src/lib.rs
   |
   | pub const fn is_mmio<M: _MmioMarker>() {}
   |                         ^^^^^^^^^^^ required by this bound in `is_mmio`

error[E0277]: the trait bound `MmioUartBank<'_>: _MmioMarker` is not satisfied
  --> tests/cases/cant_fake_inner_block.rs:22:13
   |
22 |     bank_1: UartBank,
   |             ^^^^^^^^ the trait `_MmioMarker` is not implemented for `MmioUartBank<'_>`
   |
   = help: the trait `_MmioMarker` is implemented for `MmioUart<'_>`
note: required by a bound in `is_mmio`
  --> src/lib.rs
   |
   | pub const fn is_mmio<M: _MmioMarker>() {}
   |                         ^^^^^^^^^^^ required by this bound in `is_mmio`
